boxmodel-flow-fertig

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,96 +11,104 @@
     <header>
       <h1>E-Sports Tournaments</h1>
     </header>
-    <section class="esports-info">
-      <img
-        class="esports-info-img"
-        src="./images/dota.jpg"
-        alt="Dota 2 Tournament"
-      />
-      <h2>Dota 2</h2>
-      <p>
-        Dota 2 is a multiplayer online battle arena (MOBA) video game developed
-        and published by Valve Corporation. The game is a sequel to Defense of
-        the Ancients (DotA), which was a community-created mod for Blizzard
-        Entertainment's Warcraft III: Reign of Chaos and its expansion pack, The
-        Frozen Throne. Dota 2 is played in matches between two teams of five
-        players, with each team occupying and defending their own separate base
-        on the map. Each of the ten players independently controls a powerful
-        character, known as a "hero", who all have unique abilities and
-        differing styles of play. During a match, players collect experience
-        points and items for their heroes to successfully defeat the opposing
-        team's heroes in player versus player combat. A team wins by being the
-        first to destroy the other team's "Ancient", a large structure located
-        within their base.
-      </p>
-      <cite><a href="https://en.wikipedia.org/wiki/Dota_2">Wikipedia</a></cite>
-    </section>
-    <section class="esports-info">
-      <img
-        class="esports-info-img"
-        src="./images/hearthstone.jpg"
-        alt="Hearthstone match"
-      />
-      <h2>Hearthstone</h2>
-      <p>
-        Hearthstone is a free-to-play online digital collectible card game
-        developed and published by Blizzard Entertainment. Originally subtitled
-        Heroes of Warcraft, Hearthstone builds upon the existing lore of the
-        Warcraft series by using the same elements, characters, and relics. It
-        was first released for Microsoft Windows and macOS in March 2014, with
-        ports for iOS and Android releasing later that year. The game features
-        cross-platform play, allowing players on any supported device to compete
-        with one another, restricted only by geographical region account limits.
-        The game is a turn-based card game between two opponents, using
-        constructed decks of 30 cards along with a selected hero with a unique
-        power. Players use their limited mana crystals to play abilities or
-        summon minions to attack the opponent, with the goal of destroying the
-        opponent's hero. Winning matches and completing quests earn in-game
-        gold, rewards in the form of new cards, and other in-game prizes.
-        Players can then buy packs of new cards through gold or
-        microtransactions to customize and improve their decks. The game
-        features several modes of play, including casual and ranked matches,
-        drafted arena battles, and single-player adventures. New content for the
-        game involves the addition of new card sets and gameplay, taking the
-        form of either expansion packs or adventures that reward the player with
-        collectible cards upon completion.
-      </p>
-      <cite
-        ><a href="https://en.wikipedia.org/wiki/Hearthstone">Wikipedia</a></cite
-      >
-    </section>
-    <section class="esports-info">
-      <img
-        class="esports-info-img"
-        src="./images/overwatch.jpg"
-        alt="Overwatch"
-      />
-      <h2>Overwatch</h2>
-      <p>
-        Overwatch is a team-based multiplayer first-person shooter developed and
-        published by Blizzard Entertainment. Described as a "hero shooter,"
-        Overwatch assigns players into two teams of six, with each player
-        selecting from a roster of over 30 characters, known as "heroes," each
-        with a unique style of play that is divided into three general roles
-        that fit their purpose. Players on a team work together to secure and
-        defend control points on a map or escort a payload across the map in a
-        limited amount of time. Players gain cosmetic rewards that do not affect
-        gameplay, such as character skins and victory poses, as they play the
-        game. The game was initially launched with casual play, with a
-        competitive ranked mode, various 'arcade' game modes, and a
-        player-customizable server browser subsequently included following its
-        release. Additionally, Blizzard has added new characters, maps, and game
-        modes post-release, all free of charge, with the only additional cost to
-        players being optional loot boxes to earn cosmetic items. It was
-        released for PlayStation 4, Xbox One, and Windows in May 2016, with an
-        upcoming Nintendo Switch version in October 2019.
-      </p>
-      <cite
-        ><a href="https://en.wikipedia.org/wiki/Overwatch_(video_game)"
-          >Wikipedia</a
-        ></cite
-      >
-    </section>
+    <div>
+      <section class="esports-info">
+        <img
+          class="esports-info-img"
+          src="./images/dota.jpg"
+          alt="Dota 2 Tournament"
+        />
+        <h2>Dota 2</h2>
+        <p>
+          Dota 2 is a multiplayer online battle arena (MOBA) video game
+          developed and published by Valve Corporation. The game is a sequel to
+          Defense of the Ancients (DotA), which was a community-created mod for
+          Blizzard Entertainment's Warcraft III: Reign of Chaos and its
+          expansion pack, The Frozen Throne. Dota 2 is played in matches between
+          two teams of five players, with each team occupying and defending
+          their own separate base on the map. Each of the ten players
+          independently controls a powerful character, known as a "hero", who
+          all have unique abilities and differing styles of play. During a
+          match, players collect experience points and items for their heroes to
+          successfully defeat the opposing team's heroes in player versus player
+          combat. A team wins by being the first to destroy the other team's
+          "Ancient", a large structure located within their base.
+        </p>
+        <cite
+          ><a href="https://en.wikipedia.org/wiki/Dota_2">Wikipedia</a></cite
+        >
+      </section>
+      <section class="esports-info">
+        <img
+          class="esports-info-img"
+          src="./images/hearthstone.jpg"
+          alt="Hearthstone match"
+        />
+        <h2>Hearthstone</h2>
+        <p>
+          Hearthstone is a free-to-play online digital collectible card game
+          developed and published by Blizzard Entertainment. Originally
+          subtitled Heroes of Warcraft, Hearthstone builds upon the existing
+          lore of the Warcraft series by using the same elements, characters,
+          and relics. It was first released for Microsoft Windows and macOS in
+          March 2014, with ports for iOS and Android releasing later that year.
+          The game features cross-platform play, allowing players on any
+          supported device to compete with one another, restricted only by
+          geographical region account limits. The game is a turn-based card game
+          between two opponents, using constructed decks of 30 cards along with
+          a selected hero with a unique power. Players use their limited mana
+          crystals to play abilities or summon minions to attack the opponent,
+          with the goal of destroying the opponent's hero. Winning matches and
+          completing quests earn in-game gold, rewards in the form of new cards,
+          and other in-game prizes. Players can then buy packs of new cards
+          through gold or microtransactions to customize and improve their
+          decks. The game features several modes of play, including casual and
+          ranked matches, drafted arena battles, and single-player adventures.
+          New content for the game involves the addition of new card sets and
+          gameplay, taking the form of either expansion packs or adventures that
+          reward the player with collectible cards upon completion.
+        </p>
+        <cite
+          ><a href="https://en.wikipedia.org/wiki/Hearthstone"
+            >Wikipedia</a
+          ></cite
+        >
+      </section>
+      <section class="esports-info">
+        <img
+          class="esports-info-img"
+          src="./images/overwatch.jpg"
+          alt="Overwatch"
+        />
+        <h2>Overwatch</h2>
+        <p>
+          Overwatch is a team-based multiplayer first-person shooter developed
+          and published by Blizzard Entertainment. Described as a "hero
+          shooter," Overwatch assigns players into two teams of six, with each
+          player selecting from a roster of over 30 characters, known as
+          "heroes," each with a unique style of play that is divided into three
+          general roles that fit their purpose. Players on a team work together
+          to secure and defend control points on a map or escort a payload
+          across the map in a limited amount of time. Players gain cosmetic
+          rewards that do not affect gameplay, such as character skins and
+          victory poses, as they play the game. The game was initially launched
+          with casual play, with a competitive ranked mode, various 'arcade'
+          game modes, and a player-customizable server browser subsequently
+          included following its release. Additionally, Blizzard has added new
+          characters, maps, and game modes post-release, all free of charge,
+          with the only additional cost to players being optional loot boxes to
+          earn cosmetic items. It was released for PlayStation 4, Xbox One, and
+          Windows in May 2016, with an upcoming Nintendo Switch version in
+          October 2019.
+        </p>
+        <cite
+          ><a href="https://en.wikipedia.org/wiki/Overwatch_(video_game)"
+            >Wikipedia</a
+          ></cite
+        >
+      </section>
+    </div>
+    <br />
 
     <section class="esports-tournaments">
       <img
@@ -142,7 +150,102 @@
         >
       </article>
     </section>
-
-    
   </body>
 </html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Floats</h1>
+
+    <p>
+      Floats sorgen dafür, das wir elemente links oder rechts platzieren können.
+    </p>
+
+    <p>
+      Ein element, dem ein float in css zugewiesen wurde, ist kein block-element
+      mehr, nimmt also keinen reservierten platz mehr auf unserer seite ein.
+    </p>
+
+    <b>float optionen</b>
+
+    <ul>
+      <li>float: left; = platziert das element auf der linken seite</li>
+      <li>float: right; = platziert das element auf der rechten seite</li>
+      <li>float: none; = default, keine platzierung</li>
+    </ul>
+
+    <p>
+      mit float: left; platzieren wir elemente auf der linken seite (grüne box)
+    </p>
+    <p>
+      mit float: right; platzieren wir elemente auf der rechten seite (rote box)
+    </p>
+
+    <br />
+
+    <div>
+      <div class="box left"></div>
+      <div class="box left-2"></div>
+      <div class="box right"></div>
+    </div>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <p>Bilder können in text, mit float, fließend platziert werden</p>
+
+    <p>
+      <img src="testbild.png" alt="Unser Testbild" class="testbild" />
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati sint
+      praesentium adipisci repellendus aut ut! Sit exercitationem debitis
+      corrupti, ipsa excepturi minus est doloremque, totam nemo commodi quae
+      cumque similique! Quod harum expedita, ipsa nemo, pariatur neque enim,
+      vero cumque debitis fugit dolores? Animi dignissimos excepturi repudiandae
+      aut optio dolorem et voluptatibus quaerat aspernatur cupiditate. Corporis
+      tempora in quibusdam molestiae! Dignissimos facere sapiente, tempore
+      doloremque cum molestiae amet aut eos facilis totam! Aliquam quidem
+      repellat doloremque, iusto neque iste sequi fugit optio vel deserunt cum
+      veniam voluptatum maiores fugiat ut. Maxime ex quis officia, atque culpa
+      totam unde aliquam rerum voluptatibus placeat repudiandae praesentium
+      eligendi nemo sapiente distinctio in illo molestias. Accusantium quo vel
+      cum neque voluptates obcaecati veritatis ut! Dolorem iusto dicta
+      exercitationem odio. Similique corrupti, aut fugiat dolores eum
+      voluptates. Esse veniam corrupti quo, excepturi debitis inventore natus
+      possimus consequuntur rerum nostrum aliquam at dignissimos hic tenetur
+      sunt!
+    </p>
+
+    <p>
+      Mit floats können wir auch seiten designen, so hat man es bis zu flexbox
+      standardmäßig gemacht.
+    </p>
+
+    <div class="grid">
+      <div class="column">left</div>
+      <div class="column">center</div>
+      <div class="column">right</div>
+    </div>
+
+    <div class="grid">
+      <div class="column-2">left</div>
+      <div class="column-2">center</div>
+      <div class="column-2">center</div>
+      <div class="column-2">right</div>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+  </body>
+</html> -->
